--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1976d2" />
+    <script src="/assets/env.js"></script>
   </head>
   <body class="mat-typography">
     <fac-root></fac-root>
