--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#1976d2" />
     <script src="/assets/env.js"></script>
   </head>
-  <body class="mat-typography">
+  <body class="mat-typography mat-app-background">
     <fac-root></fac-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
